--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Web Browser</string>
     <string name="go">Go</string>
+    <string name="prev">&lt;</string>
+    <string name="next">&gt;</string>
 </resources>
